force-app/main/default/objects/NV_Batch_Job_Setting__mdt/NV_Batch_Job_Setting__mdt.object-meta.xml
<CustomObject>
    <label>NV Batch Job Setting</label>
    <pluralLabel>NV Batch Job Settings</pluralLabel>
</CustomObject>