force-app/main/default/objects/NV_Batch_Job_Setting__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <label>Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>