force-app/main/default/objects/NV_Batch_Job_Setting__mdt/fields/Disable_Job__c.field-meta.xml
<CustomField>
    <fullName>Disable_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this checkbox to disable the scheduled Job.</description>
    <inlineHelpText>Check this checkbox to disable the scheduled Job.</inlineHelpText>
    <label>Disable Job</label>
    <type>Checkbox</type>
</CustomField>