force-app/main/default/objects/NV_Batch_Job_Setting__mdt/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <inlineHelpText>Frequency of Job in minutes</inlineHelpText>
    <label>Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>