force-app/main/default/objects/NV_Batch_Job_Setting__mdt/fields/Lookback_Time__c.field-meta.xml
<CustomField>
    <fullName>Lookback_Time__c</fullName>
    <inlineHelpText>Lookback time in minutes</inlineHelpText>
    <label>Lookback Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>