force-app/main/default/objects/NV_Batch_Job_Setting__mdt/listViews/All_Batch_Job_Settings.listView-meta.xml
<ListView>
    <fullName>All_Batch_Job_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Batch_Size__c</columns>
    <columns>Disable_Job__c</columns>
    <columns>Frequency__c</columns>
    <columns>Lookback_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Batch Job Settings</label>
    <language>en_US</language>
</ListView>